Revert "Update to Bootstrap v5. Replace media classes for d-flex."
This reverts commit 10ec176526312ad58d3ed56129b4a8935d4c3e50.

--- a/assets/src/scss/bootstrap-build.scss
+++ b/assets/src/scss/bootstrap-build.scss
@@ -20,9 +20,9 @@ Text Domain: planet4-master-theme
 
 // Required
 // See: https://getbootstrap.com/docs/4.3/getting-started/theming/#importing
-// @import "~bootstrap/scss/functions";
-// @import "~bootstrap/scss/variables";
-// @import "~bootstrap/scss/mixins";
+@import "~bootstrap/scss/functions";
+@import "~bootstrap/scss/variables";
+@import "~bootstrap/scss/mixins";
 
 // TODO: Add variable overrides for the 16px grid here.
 
@@ -50,7 +50,7 @@ Text Domain: planet4-master-theme
 // @import "~bootstrap/scss/_input-group.scss";
 // @import "~bootstrap/scss/_jumbotron.scss";
 // @import "~bootstrap/scss/_list-group.scss";
-// @import "~bootstrap/scss/_media.scss";
+@import "~bootstrap/scss/_media.scss";
 // @import "~bootstrap/scss/_mixins.scss";
 @import "~bootstrap/scss/_modal.scss";
 // @import "~bootstrap/scss/_nav.scss";
