--- a/templates/tease-search.twig
+++ b/templates/tease-search.twig
@@ -16,7 +16,7 @@
 {% elseif ( first_of_the_page and loop.index0 is divisible by(5) ) %}
 	<div class="search-results-load row-hidden" style="display: none;">
 {% endif %}
-		<li id="result-row-{{ post.ID }}" class="d-flex search-result-list-item">
+		<li id="result-row-{{ post.ID }}" class="media search-result-list-item">
 
 		<img
 			class="d-flex search-result-item-image"
@@ -27,7 +27,7 @@
 			data-ga-action="Image"
 			data-ga-label="{{ ga_page_type }}" />
 
-		<div id="tease-{{ post.ID }}" class="search-result-item-body tease tease-{{ post.post_type }}">
+		<div id="tease-{{ post.ID }}" class="media-body search-result-item-body tease tease-{{ post.post_type }}">
 			<div class="search-result-item-flex-title">
 				<div>
 					{% if ( is_archive or is_campaign ) %}
