Revert "Replace sr-only with visually-hidden."
This reverts commit 388887544b8c1fae9c18f9d7a36e2c64c73368b5.

--- a/templates/blocks/carousel_header_full-width-classic.twig
+++ b/templates/blocks/carousel_header_full-width-classic.twig
@@ -70,11 +70,11 @@
 		{% if fields.total_images > 1 %}
 			<a class="carousel-control-prev" href="#carousel-wrapper-header" role="button" data-slide="prev">
 				<span class="carousel-control-prev-icon" aria-hidden="true"><i></i></span>
-				<span class="visually-hidden">Prev</span>
+				<span class="sr-only">Prev</span>
 			</a>
 			<a class="carousel-control-next" href="#carousel-wrapper-header" role="button" data-slide="next">
 				<span class="carousel-control-next-icon" aria-hidden="true"><i></i></span>
-				<span class="visually-hidden">Next</span>
+				<span class="sr-only">Next</span>
 			</a>
 		{% endif %}
 	</div>
