PLANET-5984 Fix mandatory radios validation

--- a/assets/src/styles/blocks/ENForm/components/_enform.scss
+++ b/assets/src/styles/blocks/ENForm/components/_enform.scss
@@ -107,6 +107,16 @@
         &:focus {
           border-color: $dark-orange;
         }
+
+        + .invalid-feedback {
+          display: block;
+        }
+
+        &[type="radio"] {
+          + .invalid-feedback {
+            margin-top: -12px;
+          }
+        }
       }
 
       + .invalid-feedback {
