--- a/templates/blocks/enform/enform_post.twig
+++ b/templates/blocks/enform/enform_post.twig
@@ -78,7 +78,7 @@
 											/>
 											<span class="custom-control-description">
 												{{ question_option.option_label|e('wp_kses_post')|raw }}
-											</span><br />
+											</span>
 										</label>
 									</div>
 								</div>
