PLANET-5981 Fix search result images

--- a/assets/src/scss/pages/search/_search-results.scss
+++ b/assets/src/scss/pages/search/_search-results.scss
@@ -37,6 +37,7 @@
 
         @include small-and-up {
           width: 25%;
+          min-width: 25%;
           margin: 0 32px 0 0;
           visibility: visible;
 
