--- a/templates/tease-search.twig
+++ b/templates/tease-search.twig
@@ -16,7 +16,7 @@
 {% elseif ( first_of_the_page and loop.index0 is divisible by(5) ) %}
 	<div class="search-results-load row-hidden" style="display: none;">
 {% endif %}
-		<li id="result-row-{{ post.ID }}" class="d-flex search-result-list-item">
+		<li id="result-row-{{ post.ID }}" class="d-flex align-items-start search-result-list-item">
 
 		<img
 			class="d-flex search-result-item-image"
