--- a/templates/search.twig
+++ b/templates/search.twig
@@ -216,7 +216,7 @@
 												</button>
 											{% endfor %}
 										{% endfor %}
-										<button class="clearall">{{ __( 'Clear all', 'planet4-master-theme' ) }} <i class="icon-cross"></i></button>
+										<button class="btn clearall">{{ __( 'Clear all', 'planet4-master-theme' ) }} <i class="icon-cross"></i></button>
 									</div>
 								</div>
 							{% endif %}
