PLANET-5983 Prepare for new variable names
* By chaining them with the old name.

--- a/assets/src/styles/blocks/ENForm/campaigns/_mixins.scss
+++ b/assets/src/styles/blocks/ENForm/campaigns/_mixins.scss
@@ -47,7 +47,7 @@
     #enform-content {
       .title-and-description {
         h2 {
-          font-family: var(--header-primary-font) !important;
+          font-family: var(--headings--font-family, var(--header-primary-font)) !important;
         }
       }
     }
