--- a/assets/src/styles/blocks/ENForm/components/_enform.scss
+++ b/assets/src/styles/blocks/ENForm/components/_enform.scss
@@ -29,7 +29,7 @@
 
   h1, h2, h3 {
     color: white;
-    font-family: var(--header-primary-font) !important;
+    font-family: var(--headings--font-family, var(--header-primary-font)) !important;
   }
 
   h1 {
