--- a/assets/src/styles/blocks/Covers/TakeActionBoxoutScroll.scss
+++ b/assets/src/styles/blocks/Covers/TakeActionBoxoutScroll.scss
@@ -76,7 +76,11 @@
     font-weight: 700;
     display: -webkit-box;
     -webkit-line-clamp: 2;
+    /* stylelint-disable property-no-vendor-prefix */
+    /*! autoprefixer: off */
     -webkit-box-orient: vertical;
+    /*! autoprefixer: on */
+    /* stylelint-enable property-no-vendor-prefix */
     overflow: hidden;
   }
 
