--- a/assets/src/scss/pages/_page.scss
+++ b/assets/src/scss/pages/_page.scss
@@ -89,12 +89,72 @@ div.page-template {
   }
 }
 
-.error-message {
-  color: $orange-hover;
+.password-form {
+  .input-text{
+    font-size:16px;
+    line-height:1.6;
+    font-weight:400;
+    margin-bottom:16px;
+    position:relative;
+  }
+
+  .input-text input{
+    border:1px solid $grey-20;
+    border-radius:4px;
+    display:inline-block;
+    font-size:16px;
+    padding:15px 14px 8px;
+    min-width:400px;
+
+    &.is-invalid {
+      border-color: $dark-orange;
+      background: $white;
+
+      &:focus {
+        border-color: $dark-orange;
+      }
+    }
+  }
+
+  .input-text input:hover{
+    border:1px solid $grey-40;
+  }
+
+  .input-text input:focus{
+    border-color:rgba(0,109,253,0.75);
+    outline:0 none;
+  }
+
+  .invalid-pw-feedback {
+    font-family: $roboto;
+    background: $dark-orange;
+    color: $white;
+    border-radius: 4px;
+    font-size: 12px;
+    font-weight: 500;
+    padding: 6px 12px;
+    width: fit-content;
+    position: relative;
+    pointer-events: none;
+    margin-top: 6px;
+
+    &:after {
+      bottom: 100%;
+      border: solid transparent;
+      content: "";
+      height: 0;
+      width: 0;
+      position: absolute;
+      border-bottom-color: $dark-orange;
+      border-width: 5px;
+      right: auto;
+      left: 16px;
+
+      html[dir="rtl"] & {
+        left: auto;
+        right: 16px;
+      }
+    }
+  }
 }
 
-.password-field {
-  padding-top: $space-xs;
-  padding-bottom: $space-xs;
-  margin-bottom: $space-xs;
-}
