--- a/templates/single-page.twig
+++ b/templates/single-page.twig
@@ -7,13 +7,13 @@
 
 	<div class="page-template">
 
-		<form id="password-form" class="" action="{{login_url}}?action=postpass" method="post">
+		<form id="password-form" class="password-form" action="{{login_url}}?action=postpass" method="post">
 			<div class="mb-3">
 				<label for="pwbox-{{post.ID}}" class="form-label"><h6>{{ __( 'To see the content of this page, please enter your password  below', 'planet4-master-theme' ) }}</h6></label>
-				<div class="col-sm-8">
-					<input class="form-control password-field" name="post_password" id="pwbox-{{post.ID}}" type="password">
+				<div class="input-text">
+					<input name="post_password" id="pwbox-{{post.ID}}" type="password" {% if not is_password_valid %}class="is-invalid"{% endif %}>
+					{% if not is_password_valid %} <div class="invalid-pw-feedback">{{ __( 'Invalid password, please try again', 'planet4-master-theme' ) }}</div>{% endif %}
 				</div>
-				{% if not is_password_valid %} <span class="error-message">{{ __( 'Sorry, Invalid password.', 'planet4-master-theme' ) }}</span> {% endif %}
 			</div>
 			<div class="mb-3">
 				<button class="btn btn-primary" type="submit">{{ __( 'Submit', 'planet4-master-theme' ) }}</button>
