--- a/assets/src/styles/campaigns/themes/_theme_forest.scss
+++ b/assets/src/styles/campaigns/themes/_theme_forest.scss
@@ -1,3 +1,8 @@
+:root {
+  --link--color: #1b4a1b;
+  --link-hover--color: #2caf4f;
+}
+
 body.theme-forest {
   $kanit: "Kanit", sans-serif;
   $open-sans: "Open Sans", sans-serif;
@@ -32,12 +37,7 @@ body.theme-forest {
 
   .page-template {
     a:not(.btn):not(.share-btn) {
-      color: $forest-dark-green;
       text-transform: uppercase;
-
-      &:hover {
-        color: $forest-green;
-      }
     }
 
     .btn-primary {
