PLANET-5981 Fix form-select arrow for rtl direction

--- a/src/layout/_forms.scss
+++ b/src/layout/_forms.scss
@@ -179,6 +179,10 @@ input[type="email"].form-control {
 .form-select {
   height: 48px;
 
+  html[dir="rtl"] & {
+    background-position: left 0.75rem center;
+  }
+
   &:invalid {
     color: $grey-40;
   }
