PLANET-5981 Fix search for rtl direction

--- a/assets/src/scss/pages/search/_filter-sidebar.scss
+++ b/assets/src/scss/pages/search/_filter-sidebar.scss
@@ -115,6 +115,11 @@
     margin-top: 29px;
     z-index: 2;
 
+    html[dir="rtl"] & {
+      right: 0;
+      left: auto;
+    }
+
     @include small-and-up {
       margin-top: -14px;
     }
