--- a/templates/search.twig
+++ b/templates/search.twig
@@ -333,8 +333,8 @@
 				<div class="col-lg-8">
 					<div class="result-area">
 						<div class="sort-filter clearfix">
-							<div class="float-end">
-								<label class="me-sm-2" for="select_order">{{ __('Sort by', 'planet4-master-theme' ) }}</label>
+							<div class="select-container">
+								<label for="select_order">{{ __('Sort by', 'planet4-master-theme' ) }}</label>
 								<select
 										id="select_order"
 										class="form-select"
