--- a/assets/src/scss/style.scss
+++ b/assets/src/scss/style.scss
@@ -17,13 +17,13 @@ Text Domain: planet4-master-theme
 @import "styleguide/src/base/functions";
 @import "styleguide/src/base/mixins";
 @import "styleguide/src/base/fonts";
-@import "styleguide/src/base/typography";
-@import "styleguide/src/base/icons";
-@import "styleguide/src/base/rtl";
-@import "styleguide/src/base/body";
+@import "base/typography";
+@import "base/icons";
+@import "base/rtl";
+@import "base/body";
 
 // To be taken care of later
-@import "styleguide/src/base/shame";
+@import "base/shame";
 
 // Components
 @import "styleguide/src/components/blockquote";
@@ -34,16 +34,16 @@ Text Domain: planet4-master-theme
 @import "styleguide/src/components/tweet-block";
 
 // Layout
-@import "styleguide/src/layout/breadcrumbs";
-@import "styleguide/src/layout/blocks";
-@import "styleguide/src/layout/cookies";
-@import "styleguide/src/layout/footer";
-@import "styleguide/src/layout/forms";
-@import "styleguide/src/layout/navbar";
-@import "styleguide/src/layout/page-header";
-@import "styleguide/src/layout/page-section";
-@import "styleguide/src/layout/skewed-overlay";
-@import "styleguide/src/layout/tables";
+@import "layout/breadcrumbs";
+@import "layout/blocks";
+@import "layout/cookies";
+@import "layout/footer";
+@import "layout/forms";
+@import "layout/navbar";
+@import "layout/page-header";
+@import "layout/page-section";
+@import "layout/skewed-overlay";
+@import "layout/tables";
 
 // Posts
 @import "pages/post/post";
