Allow saving theme, show diff
Fix wrong ul getting max height

--- a/assets/src/styles/components/VarPicker.scss
+++ b/assets/src/styles/components/VarPicker.scss
@@ -4,6 +4,22 @@
   line-height: initial !important;
 }
 
+html.hide-wp-admin-bar {
+  margin-top: 0 !important;
+
+  #wpadminbar {
+    display: none;
+  }
+
+  nav#header {
+    top: 0;
+  }
+}
+
+.server-theme-current _-- {
+  background: rgba(246, 246, 89, 0.63);
+}
+
 .var-picker > ul {
   padding: 0;
   max-height: 80vh;
