Show separate title after upload, fix theme bg

--- a/assets/src/styles/components/VarPicker.scss
+++ b/assets/src/styles/components/VarPicker.scss
@@ -16,6 +16,10 @@ html.hide-wp-admin-bar {
   }
 }
 
+.server-theme {
+  background: white;
+}
+
 .server-theme-current _-- {
   background: rgba(246, 246, 89, 0.63);
 }
