PLANET-6030 Unset 100vw width of Carousel Header in editor
* This was increasing the editor width, pushing the sidebar off the
right side of the screen.
*Probably in WP 5.6 the editor overflow CSS changed. Or maybe one of our
overrides stopped working, hard to tell what's going on.
* Does make it display not as nicely as before, but the block is
converted to wysiwyg soon anyway.

--- a/assets/src/styles/blocks/CarouselHeaderEditorOverrides.scss
+++ b/assets/src/styles/blocks/CarouselHeaderEditorOverrides.scss
@@ -13,8 +13,14 @@
   .carousel-header_full-width-classic {
     width: unset;
 
-    .carousel-item.active {
-      position: relative !important;
+    .carousel-item {
+      .background-holder {
+        width: unset;
+      }
+
+      &.active {
+        position: relative !important;
+      }
     }
   }
 
