--- a/assets/src/scss/styleguide/src/layout/_forms.scss
+++ b/assets/src/scss/styleguide/src/layout/_forms.scss
@@ -21,11 +21,11 @@
     opacity: 0;
     pointer-events: none;
 
-    &:not(:disabled) + .custom-control-description:hover:before {
+    &:not(:disabled) ~ .custom-control-description:hover:before {
       border-color: $grey-80;
     }
 
-    & + .custom-control-description {
+    & ~ .custom-control-description {
       position: relative;
       cursor: pointer;
       font-family: $roboto;
@@ -58,7 +58,7 @@
       }
     }
 
-    &:checked + .custom-control-description {
+    &:checked ~ .custom-control-description {
       &:before {
         border-color: $grey-80;
       }
@@ -81,7 +81,7 @@
       }
     }
 
-    &:disabled + .custom-control-description {
+    &:disabled ~ .custom-control-description {
       cursor: auto;
 
       &:before {
@@ -95,11 +95,11 @@
     pointer-events: none;
     opacity: 0;
 
-    &:not(:disabled) + .custom-control-description:hover:before {
+    &:not(:disabled) ~ .custom-control-description:hover:before {
       border-color: $grey-80;
     }
 
-    & + .custom-control-description {
+    & ~ .custom-control-description {
       position: relative;
       cursor: pointer;
       font-family: $roboto;
@@ -131,7 +131,7 @@
       }
     }
 
-    &:checked + .custom-control-description:before {
+    &:checked ~ .custom-control-description:before {
       background: $grey-80;
       box-shadow: inset 0 0 0 2px $white;
       border-color: $grey-80;
@@ -219,6 +219,55 @@ textarea.form-control {
       & ~ label {
         transform: translateY(-10px);
         opacity: 1;
+      }
+    }
+  }
+}
+
+input,
+select {
+  &.is-invalid {
+    border-color: $dark-orange !important;
+    background: $white;
+    background-image: none !important;
+
+    &:focus {
+      border-color: $dark-orange;
+    }
+
+    ~ .invalid-feedback {
+      display: block;
+    }
+  }
+
+  ~ .invalid-feedback {
+    background: $dark-orange;
+    color: white;
+    border-radius: 4px;
+    font-size: 12px;
+    font-weight: 500;
+    padding: 6px 12px;
+    width: fit-content;
+    position: relative;
+    pointer-events: none;
+    margin-top: 6px;
+    font-family: $roboto;
+
+    &:after {
+      bottom: 100%;
+      border: solid transparent;
+      content: "";
+      height: 0;
+      width: 0;
+      position: absolute;
+      border-bottom-color: $dark-orange;
+      border-width: 5px;
+      right: auto;
+      left: 16px;
+
+      html[dir="rtl"] & {
+        left: auto;
+        right: 16px;
       }
     }
   }
