--- a/templates/single-password.twig
+++ b/templates/single-password.twig
@@ -15,7 +15,7 @@
 						<label for="pwbox-{{post.ID}}" class="form-label"><h6>{{ __( 'To see the content of this page, please enter your password  below', 'planet4-master-theme' ) }}</h6></label>
 						<div class="input-text">
 							<input name="post_password" id="pwbox-{{post.ID}}" type="password" {% if not is_password_valid %}class="is-invalid"{% endif %}>
-							{% if not is_password_valid %} <div class="invalid-pw-feedback">{{ __( 'Invalid password, please try again', 'planet4-master-theme' ) }}</div>{% endif %}
+							{% if not is_password_valid %} <div class="invalid-feedback">{{ __( 'Invalid password, please try again', 'planet4-master-theme' ) }}</div>{% endif %}
 						</div>
 					</div>
 					<div class="mb-3">
