PLANET-5984 Move input error styles to _forms.scss

--- a/templates/blocks/enform/enform_post.twig
+++ b/templates/blocks/enform/enform_post.twig
@@ -133,7 +133,7 @@
 										/>
 										<span class="custom-control-description">
 											{{ radio_option.option_label|e('wp_kses_post')|raw }}
-										</span><br />
+										</span>
 									</label>
 								</div>
 							</div>
