PLANET-6034 adjust xxl breakpoint to wider than HD

--- a/assets/src/scss/bootstrap-build.scss
+++ b/assets/src/scss/bootstrap-build.scss
@@ -20,6 +20,7 @@ Text Domain: planet4-master-theme
 
 @import "~bootstrap/scss/functions";
 @import "~bootstrap/scss/variables";
+@import "./bootstrap-variables";
 @import "~bootstrap/scss/mixins";
 @import "~bootstrap/scss/utilities";
 
