PLANET-6034 Disable Bootstrap 5 XXL breakpoint

--- a/assets/src/scss/bootstrap-build.scss
+++ b/assets/src/scss/bootstrap-build.scss
@@ -18,6 +18,7 @@ Text Domain: planet4-master-theme
 
 // Configuration
 
+@import "vendors/bootstrap";
 @import "~bootstrap/scss/functions";
 @import "~bootstrap/scss/variables";
 @import "~bootstrap/scss/mixins";
