--- a/assets/src/scss/pages/search/_filter-sidebar.scss
+++ b/assets/src/scss/pages/search/_filter-sidebar.scss
@@ -95,16 +95,8 @@
       }
     }
 
-    .custom-control-description {
-      color: $grey;
-
-      @include small-and-up {
-        font-size: $font-size-sm;
-      }
-
-      @include x-large-and-up {
-        font-size: 1.125rem;
-      }
+    .custom-control .custom-control-description {
+      font-size: $font-size-sm;
     }
   }
 
