PLANET-6043 Fix search pages image aspect ratios

--- a/assets/src/scss/pages/search/_search-results.scss
+++ b/assets/src/scss/pages/search/_search-results.scss
@@ -28,6 +28,7 @@
       margin: 0 auto 24px;
       border-bottom: 1px solid $grey-20;
       position: relative;
+      align-items: flex-start;
 
       .search-result-item-image,
       .blank-block {
