PLANET-6043 Fix search pages image aspect ratios

--- a/templates/tease-author.twig
+++ b/templates/tease-author.twig
@@ -1,4 +1,4 @@
-<li id="result-row-{{ post.ID }}" class="d-flex search-result-list-item">
+<li id="result-row-{{ post.ID }}" class="d-flex align-items-start search-result-list-item">
 	<img
 		class="d-flex search-result-item-image"
 		src="{{ post.thumbnail.src('thumbnail') }}"
