Move up styleguide folders

--- a/assets/src/scss/editorStyle.scss
+++ b/assets/src/scss/editorStyle.scss
@@ -4,18 +4,18 @@
 @import "~bootstrap/scss/tooltip";
 @import "~bootstrap/scss/buttons";
 
-@import "styleguide/src/base/variables";
-@import "styleguide/src/base/colors";
-@import "styleguide/src/base/functions";
-@import "styleguide/src/base/mixins";
-@import "styleguide/src/base/fonts";
+@import "base/variables";
+@import "base/colors";
+@import "base/functions";
+@import "base/mixins";
+@import "base/fonts";
 
-@import "styleguide/src/base/icons";
-@import "styleguide/src/components/buttons";
-@import "styleguide/src/base/typography";
-@import "styleguide/src/layout/tables";
-@import "styleguide/src/layout/page-header";
-@import "styleguide/src/layout/breadcrumbs";
-@import "styleguide/src/layout/forms";
+@import "base/icons";
+@import "components/buttons";
+@import "base/typography";
+@import "layout/tables";
+@import "layout/page-header";
+@import "layout/breadcrumbs";
+@import "layout/forms";
 
 @import "editorOverrides";
