--- a/assets/src/scss/style.scss
+++ b/assets/src/scss/style.scss
@@ -12,38 +12,38 @@ Text Domain: planet4-master-theme
 */
 
 // Base
-@import "styleguide/src/base/variables";
-@import "styleguide/src/base/colors";
-@import "styleguide/src/base/functions";
-@import "styleguide/src/base/mixins";
-@import "styleguide/src/base/fonts";
-@import "styleguide/src/base/typography";
-@import "styleguide/src/base/icons";
-@import "styleguide/src/base/rtl";
-@import "styleguide/src/base/body";
+@import "base/variables";
+@import "base/colors";
+@import "base/functions";
+@import "base/mixins";
+@import "base/fonts";
+@import "base/typography";
+@import "base/icons";
+@import "base/rtl";
+@import "base/body";
 
 // To be taken care of later
-@import "styleguide/src/base/shame";
+@import "base/shame";
 
 // Components
-@import "styleguide/src/components/blockquote";
-@import "styleguide/src/components/buttons";
-@import "styleguide/src/components/share-buttons";
-@import "styleguide/src/components/spinner";
-@import "styleguide/src/components/skip-links";
-@import "styleguide/src/components/tweet-block";
+@import "components/blockquote";
+@import "components/buttons";
+@import "components/share-buttons";
+@import "components/spinner";
+@import "components/skip-links";
+@import "components/tweet-block";
 
 // Layout
-@import "styleguide/src/layout/breadcrumbs";
-@import "styleguide/src/layout/blocks";
-@import "styleguide/src/layout/cookies";
-@import "styleguide/src/layout/footer";
-@import "styleguide/src/layout/forms";
-@import "styleguide/src/layout/navbar";
-@import "styleguide/src/layout/page-header";
-@import "styleguide/src/layout/page-section";
-@import "styleguide/src/layout/skewed-overlay";
-@import "styleguide/src/layout/tables";
+@import "layout/breadcrumbs";
+@import "layout/blocks";
+@import "layout/cookies";
+@import "layout/footer";
+@import "layout/forms";
+@import "layout/navbar";
+@import "layout/page-header";
+@import "layout/page-section";
+@import "layout/skewed-overlay";
+@import "layout/tables";
 
 // Posts
 @import "pages/post/post";
