PLANET-4809 Add CarouselHeader WYSIWYG to beta blocks

--- a/assets/src/styles/blocks/CarouselHeader/CarouselHeaderStyle.scss
+++ b/assets/src/styles/blocks/CarouselHeader/CarouselHeaderStyle.scss
@@ -75,7 +75,7 @@ $medium-image-height: 600px;
   }
 }
 
-.carousel-header_full-width-classic {
+.carousel-header-beta {
   position: relative;
   width: 100vw;
 
