--- a/assets/src/styles/editorStyle.scss
+++ b/assets/src/styles/editorStyle.scss
@@ -9,6 +9,8 @@
 @import "master-theme/assets/src/scss/base/functions";
 @import "master-theme/assets/src/scss/base/mixins";
 @import "master-theme/assets/src/scss/base/fonts";
+@import "master-theme/assets/src/scss/components/buttons";
+@import "master-theme/assets/src/scss/components/share-buttons";
 
 @import "blocks";
 
@@ -20,6 +22,7 @@
 @import "blocks/SplitTwoColumnsEditor";
 @import "blocks/SubmenuEditor";
 @import "blocks/HappypointEditor";
+@import "blocks/OldENForm/ENFormEditor";
 
 @import "components/LayoutSelector";
 @import "components/EmptyMessage";
