PLANET-6198 Convert SocialMedia block to WYSIWYG
This commit also includes code splitting for the SocialMedia block

--- a/assets/src/styles/blocks/SocialMedia/SocialMediaStyle.scss
+++ b/assets/src/styles/blocks/SocialMedia/SocialMediaStyle.scss
@@ -1,3 +1,6 @@
+@import "../../master-theme/assets/src/scss/base/variables";
+@import "../../master-theme/assets/src/scss/base/mixins";
+
 .social-media-block {
   z-index: 3;
 
@@ -9,6 +12,10 @@
         margin-left: auto !important;
         margin-right: auto !important;
       }
+    }
+
+    &.alignright {
+      float: right;
     }
 
     &-facebook {
