--- a/assets/src/styles/blocks/ENForm/ENFormStyle.scss
+++ b/assets/src/styles/blocks/ENForm/ENFormStyle.scss
@@ -2,13 +2,12 @@
 @import "../../master-theme/assets/src/scss/base/colors";
 @import "../../master-theme/assets/src/scss/base/mixins";
 @import "../../master-theme/assets/src/scss/base/fonts";
-@import "../../master-theme/assets/src/scss/components/buttons";
 
 // EN Blocks
 @import "components/enform";
-@import "components/enform-full-width-bg";
-@import "components/enform-full-width";
-@import "components/enform-side-style";
+//@import "components/enform-full-width-bg";
+//@import "components/enform-full-width";
+//@import "components/enform-side-style";
 // Campaigns - mixins
 @import "campaigns/mixins";
 // Campaigns - themes
