--- a/assets/src/styles/blocks/ENForm/components/_enform.scss
+++ b/assets/src/styles/blocks/ENForm/components/_enform.scss
@@ -146,7 +146,7 @@
       margin-top: 19px;
       line-height: 1;
 
-      button, div.btn {
+      button, .btn {
         box-sizing: border-box;
         width: 100% !important;
         margin-top: $space-lg;
