--- a/templates/footer.twig
+++ b/templates/footer.twig
@@ -1,74 +1,39 @@
-<footer class="site-footer" id="footer">
-	<div class="container">
-		<ul class="footer-social-media list-unstyled col-md-8 col-lg-5">
-			{% if social_overrides is defined and social_overrides|length %}
-				{% for social in social_overrides %}
-					<li>
-						<a href="{{ social.url }}"
-						   data-ga-category="Footer Navigation"
-						   data-ga-action="Social Icons"
-						   data-ga-label="{{ social.icon }}">
-							{{ social.icon|svgicon }}
-							<span class="visually-hidden">{{ social.icon }}</span>
-						</a>
-					</li>
-				{% endfor %}
-			{% else %}
-				{% for social in footer_social_menu %}
-					{% set name = "" %}
-					{% for class_name in social.classes %}
-						{% if 'fa-' in class_name %}
-							{% set name = class_name[3:] %}
-						{% else %}
-							{% set name = class_name %}
-						{% endif %}
-					{% endfor %}
-					<li>
-						{% set social_url = social.url %}
-						<a href="{{ social_url }}"
-						   data-ga-category="Footer Navigation"
-						   data-ga-action="Social Icons"
-						   data-ga-label="{{ social.title }}">
-							{{ name|svgicon }}
-							<span class="visually-hidden">{{ social.title }}</span>
-						</a>
-					</li>
-				{% endfor %}
-			{% endif %}
-		</ul>
-
-		<ul class="list-unstyled footer-links">
+<footer id="footer" class="site-footer site-footer--{{ nav_type ?? 'default' }}">
+	<div class="site-footer__container">
+		{% include 'footer_social_media.twig' %}
+		<ul class="site-footer__footer-links list-unstyled">
 			{% for primary in footer_primary_menu %}
 				<li>
 					<a href="{{ primary.url }}"
-					   data-ga-category="Footer Navigation"
-					   data-ga-action="Primary Links"
-					   data-ga-label="{{ primary.title }}">
+							data-ga-category="Footer Navigation"
+							data-ga-action="Primary Links"
+							data-ga-label="{{ primary.title }}">
 						{{ primary.title }}
 					</a>
 				</li>
 			{% endfor %}
 		</ul>
-
-		<ul class="list-unstyled footer-links-secondary">
+		
+		<ul class="site-footer__footer-links list-unstyled">
 			{% for secondary in footer_secondary_menu %}
 				<li>
 					<a href="{{ secondary.url }}"
-					   data-ga-category="Footer Navigation"
-					   data-ga-action="Secondary Links"
-					   data-ga-label="{{ secondary.title }}">
+						data-ga-category="Footer Navigation"
+						data-ga-action="Secondary Links"
+						data-ga-label="{{ secondary.title }}">
 						{{ secondary.title }}
 					</a>
 				</li>
 			{% endfor %}
 		</ul>
-
-		<p class="copyright-text col-md-8" role="text">
-			{{ copyright_text_line1|e('wp_kses_post')|raw }}
-		</p>
-		<p class="gp-year" role="text">
+	</div>
+	<div class="site-footer__copyright">
+		<span class="site-footer__copyright-text" role="text">
 			{{ 'creative-commons'|svgicon }}
 			{{ copyright_text_line2|e('wp_kses_post')|raw }} {{"now"|date('Y')}}
-		</p>
+		</span>
+		<span class="site-footer__copyright-text" role="text">
+			{{ copyright_text_line1|e('wp_kses_post')|raw }}
+		</span>
 	</div>
 </footer>
